--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </li>
 
           <li>
-            <img src="img/mobiledev.jpg">
+            <img src="img/projectmobile.jpg">
             <a href="project-mobile.html">Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
